k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  annotations:
    cloud.google.com/backend-config: '{"default": "flask-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
