k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopbot-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /chat
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
